syntax = "proto3";

package aviaapi.v1;
option go_package = "aviaapi/pkg/avia/v1";

import "google/protobuf/timestamp.proto";

service AviaService {
  rpc AviaTickets(TicketRequest) returns (stream TicketResponce);
}

message TicketRequest {
  string from = 1;
  string to = 2;
  google.protobuf.Timestamp data = 3;
}

message TicketResponce {
  int64  id = 1;
  google.protobuf.Timestamp depTime = 2;
  int64 duration = 3;
  int64 price = 4;

}
